@@ -1,10 +1,13 @@
 package com.plazoleta.restaurants.infrastructure.configuration.exceptionhandler;
 
-import com.plazoleta.restaurants.adapters.driven.mysql.exception.*;
+import com.plazoleta.restaurants.adapters.driven.mysql.exception.ElementNotFoundException;
+import com.plazoleta.restaurants.adapters.driven.mysql.exception.NoDataFoundException;
+import com.plazoleta.restaurants.adapters.driven.mysql.exception.RestaurantAlreadyExistsException;
+import com.plazoleta.restaurants.domain.util.exceptions.InvalidDishException;
 import com.plazoleta.restaurants.domain.util.exceptions.InvalidRestaurantException;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpStatus;
@@ -12,17 +15,17 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.validation.BindingResult;
 import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
+import org.springframework.web.method.annotation.HandlerMethodValidationException;
 
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class ControllerAdvisorTest {
-
-    @InjectMocks
-    private ControllerAdvisor controllerAdvisor;
 
     @Mock
     private MethodArgumentNotValidException methodArgumentNotValidException;
@@ -30,20 +33,32 @@ class ControllerAdvisorTest {
     @Mock
     private BindingResult bindingResult;
 
+    private ControllerAdvisor controllerAdvisor;
+
+    @BeforeEach
+    void setUp() {
+        controllerAdvisor = new ControllerAdvisor();
+    }
+
     @Test
-    void handleValidationExceptions_ShouldReturnBadRequest() {
+    void handleValidationExceptions_ShouldReturnBadRequestWithErrorDetails() {
         // Given
-        FieldError fieldError = new FieldError("addRestaurantRequest", "nombre", "El nombre es obligatorio");
+        String fieldName = "nombre";
+        String errorMessage = "El nombre es obligatorio";
+        FieldError fieldError = new FieldError("addDishRequest", fieldName, errorMessage);
+
         when(methodArgumentNotValidException.getBindingResult()).thenReturn(bindingResult);
         when(bindingResult.getFieldErrors()).thenReturn(List.of(fieldError));
 
         // When
-        ResponseEntity<ExceptionResponse> response = controllerAdvisor.handleValidationExceptions(methodArgumentNotValidException);
+        ResponseEntity<ExceptionResponse> response =
+                controllerAdvisor.handleValidationExceptions(methodArgumentNotValidException);
 
         // Then
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
         assertNotNull(response.getBody());
-        assertTrue(response.getBody().getMessage().contains("nombre"));
+        assertTrue(response.getBody().getMessage().contains(fieldName));
+        assertTrue(response.getBody().getMessage().contains(errorMessage));
         assertEquals(HttpStatus.BAD_REQUEST.toString(), response.getBody().getStatus());
         assertNotNull(response.getBody().getTimestamp());
     }
@@ -51,16 +66,17 @@ class ControllerAdvisorTest {
     @Test
     void handleRestaurantAlreadyExistsException_ShouldReturnBadRequest() {
         // Given
-        String message = "Ya existe un restaurante con ese NIT";
-        RestaurantAlreadyExistsException exception = new RestaurantAlreadyExistsException(message);
+        String errorMessage = "El restaurante ya existe";
+        RestaurantAlreadyExistsException exception = new RestaurantAlreadyExistsException(errorMessage);
 
         // When
-        ResponseEntity<ExceptionResponse> response = controllerAdvisor.handleRestaurantAlreadyExistsException(exception);
+        ResponseEntity<ExceptionResponse> response =
+                controllerAdvisor.handleRestaurantAlreadyExistsException(exception);
 
         // Then
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
         assertNotNull(response.getBody());
-        assertEquals(message, response.getBody().getMessage());
+        assertEquals(errorMessage, response.getBody().getMessage());
         assertEquals(HttpStatus.BAD_REQUEST.toString(), response.getBody().getStatus());
         assertNotNull(response.getBody().getTimestamp());
     }
@@ -68,16 +84,35 @@ class ControllerAdvisorTest {
     @Test
     void handleInvalidRestaurantException_ShouldReturnBadRequest() {
         // Given
-        String message = "El restaurante no es válido";
-        InvalidRestaurantException exception = new InvalidRestaurantException(message);
+        String errorMessage = "Datos del restaurante inválidos";
+        InvalidRestaurantException exception = new InvalidRestaurantException(errorMessage);
 
         // When
-        ResponseEntity<ExceptionResponse> response = controllerAdvisor.handleInvalidRestaurantException(exception);
+        ResponseEntity<ExceptionResponse> response =
+                controllerAdvisor.handleInvalidRestaurantException(exception);
 
         // Then
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
         assertNotNull(response.getBody());
-        assertEquals(message, response.getBody().getMessage());
+        assertEquals(errorMessage, response.getBody().getMessage());
+        assertEquals(HttpStatus.BAD_REQUEST.toString(), response.getBody().getStatus());
+        assertNotNull(response.getBody().getTimestamp());
+    }
+
+    @Test
+    void handleInvalidDishException_ShouldReturnBadRequest() {
+        // Given
+        String errorMessage = "Datos del plato inválidos";
+        InvalidDishException exception = new InvalidDishException(errorMessage);
+
+        // When
+        ResponseEntity<ExceptionResponse> response =
+                controllerAdvisor.handleInvalidDishException(exception);
+
+        // Then
+        assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
+        assertNotNull(response.getBody());
+        assertEquals(errorMessage, response.getBody().getMessage());
         assertEquals(HttpStatus.BAD_REQUEST.toString(), response.getBody().getStatus());
         assertNotNull(response.getBody().getTimestamp());
     }
@@ -85,16 +120,17 @@ class ControllerAdvisorTest {
     @Test
     void handleNoDataFoundException_ShouldReturnNotFound() {
         // Given
-        String message = "No se encontraron datos";
-        NoDataFoundException exception = new NoDataFoundException(message);
+        String errorMessage = "No se encontraron datos";
+        NoDataFoundException exception = new NoDataFoundException(errorMessage);
 
         // When
-        ResponseEntity<ExceptionResponse> response = controllerAdvisor.handleNoDataFoundException(exception);
+        ResponseEntity<ExceptionResponse> response =
+                controllerAdvisor.handleNoDataFoundException(exception);
 
         // Then
         assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
         assertNotNull(response.getBody());
-        assertEquals(message, response.getBody().getMessage());
+        assertEquals(errorMessage, response.getBody().getMessage());
         assertEquals(HttpStatus.NOT_FOUND.toString(), response.getBody().getStatus());
         assertNotNull(response.getBody().getTimestamp());
     }
@@ -102,16 +138,17 @@ class ControllerAdvisorTest {
     @Test
     void handleElementNotFoundException_ShouldReturnNotFound() {
         // Given
-        String message = "Elemento no encontrado";
-        ElementNotFoundException exception = new ElementNotFoundException(message);
+        String errorMessage = "Elemento no encontrado";
+        ElementNotFoundException exception = new ElementNotFoundException(errorMessage);
 
         // When
-        ResponseEntity<ExceptionResponse> response = controllerAdvisor.handleElementNotFoundException(exception);
+        ResponseEntity<ExceptionResponse> response =
+                controllerAdvisor.handleElementNotFoundException(exception);
 
         // Then
         assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
         assertNotNull(response.getBody());
-        assertEquals(message, response.getBody().getMessage());
+        assertEquals(errorMessage, response.getBody().getMessage());
         assertEquals(HttpStatus.NOT_FOUND.toString(), response.getBody().getStatus());
         assertNotNull(response.getBody().getTimestamp());
     }
@@ -119,16 +156,17 @@ class ControllerAdvisorTest {
     @Test
     void handleIllegalArgumentException_ShouldReturnBadRequest() {
         // Given
-        String message = "Argumento ilegal";
-        IllegalArgumentException exception = new IllegalArgumentException(message);
+        String errorMessage = "Argumento ilegal";
+        IllegalArgumentException exception = new IllegalArgumentException(errorMessage);
 
         // When
-        ResponseEntity<ExceptionResponse> response = controllerAdvisor.handleIllegalArgumentException(exception);
+        ResponseEntity<ExceptionResponse> response =
+                controllerAdvisor.handleIllegalArgumentException(exception);
 
         // Then
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
         assertNotNull(response.getBody());
-        assertEquals(message, response.getBody().getMessage());
+        assertEquals(errorMessage, response.getBody().getMessage());
         assertEquals(HttpStatus.BAD_REQUEST.toString(), response.getBody().getStatus());
         assertNotNull(response.getBody().getTimestamp());
     }
@@ -136,36 +174,35 @@ class ControllerAdvisorTest {
     @Test
     void handleGeneralException_ShouldReturnInternalServerError() {
         // Given
-        String message = "Error interno";
-        Exception exception = new Exception(message);
+        String errorMessage = "Error interno del servidor";
+        Exception exception = new Exception(errorMessage);
 
         // When
-        ResponseEntity<ExceptionResponse> response = controllerAdvisor.handleGeneralException(exception);
+        ResponseEntity<ExceptionResponse> response =
+                controllerAdvisor.handleGeneralException(exception);
 
         // Then
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
         assertNotNull(response.getBody());
-        assertEquals(message, response.getBody().getMessage());
+        assertEquals(errorMessage, response.getBody().getMessage());
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR.toString(), response.getBody().getStatus());
         assertNotNull(response.getBody().getTimestamp());
     }
 
     @Test
-    void handleValidationExceptions_WithMultipleErrors_ShouldReturnAllErrors() {
+    void handleHandlerMethodValidationException_ShouldReturnBadRequest() {
         // Given
-        FieldError fieldError1 = new FieldError("addRestaurantRequest", "nombre", "El nombre es obligatorio");
-        FieldError fieldError2 = new FieldError("addRestaurantRequest", "nit", "El NIT es obligatorio");
-        when(methodArgumentNotValidException.getBindingResult()).thenReturn(bindingResult);
-        when(bindingResult.getFieldErrors()).thenReturn(List.of(fieldError1, fieldError2));
+        HandlerMethodValidationException exception = mock(HandlerMethodValidationException.class);
+        when(exception.getAllValidationResults()).thenReturn(Collections.emptyList());
 
         // When
-        ResponseEntity<ExceptionResponse> response = controllerAdvisor.handleValidationExceptions(methodArgumentNotValidException);
+        ResponseEntity<ExceptionResponse> response =
+                controllerAdvisor.handleHandlerMethodValidationException(exception);
 
         // Then
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
         assertNotNull(response.getBody());
-        assertTrue(response.getBody().getMessage().contains("nombre"));
-        assertTrue(response.getBody().getMessage().contains("nit"));
+        assertEquals("Error de validación", response.getBody().getMessage());
         assertEquals(HttpStatus.BAD_REQUEST.toString(), response.getBody().getStatus());
         assertNotNull(response.getBody().getTimestamp());
     }
